2003-04-27  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* show a popup menu when the user clicks on the object, and allow
		  him to change the coordinate system..

2003-04-26  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* added property icons

2003-04-22  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* fix the move dependencies..

2003-04-19  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* Add KSeg file format support

	* Start using the ChangeLog for versions after 0.4.1 ;)

ma feb 11 00:12:52 CET 2002 - Dominique Devriese <devriese@kde.org>
	
	* Initial Creation