@@ -1,3 +1,7 @@
+2003-04-28  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>
+
+	* add a full screen mode
+
 2003-04-27  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>
 
 	* show a popup menu when the user clicks on the object, and allow
